created basic html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <title>Recipe Generator</title>
   </head>
   <body>
-    <h1>Recipe Generator</h1>
+    <header>
+      <h1>What do you want for dinner 🤤</h1>
+    </header>
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Please enter the....."
+          autofocus
+          required
+        />
+        <input type="submit" />
+        <div>how to cook....</div>
+      </form>
+    </main>
     <footer>
       This AI project was coded by Narae and is
       <a href="https://github.com/lunanarae/recipe-generator" target="_blank"
