--- a/index.html
+++ b/index.html
@@ -3,33 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="src/styles.css" />
     <title>Recipe Generator</title>
   </head>
   <body>
-    <header>
-      <h1>What do you want for dinner 🤤</h1>
-    </header>
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Please enter the....."
-          autofocus
-          required
-        />
-        <input type="submit" />
-        <div>how to cook....</div>
-      </form>
-    </main>
-    <footer>
-      This AI project was coded by Narae and is
-      <a href="https://github.com/lunanarae/recipe-generator" target="_blank"
-        >open-sourced on GitHub</a
-      >
-      and hosted on
-      <a href="https://ai-shows-recipe.netlify.app" target="_blank">Netlify</a>
-    </footer>
+    <div class="container">
+      <header>
+        <h1>What do you want for dinner 🤤</h1>
+      </header>
+      <h2>Please enter the ingredients what you have in your fridge.... 
+        <br />
+      <small>i.e: chicken, egg, pasta etc....</small></h2>
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Please enter the ingredients........."
+            autofocus
+            required
+            class="input-box"
+          />
+          <input type="submit" class="submit-button" />
+       
+        </form>
+        <p>
+         <div class="recipe">how to cook....</div>
+        </p>
+      </main>
+      <footer>
+        This AI project was coded by Narae and is
+        <a href="https://github.com/lunanarae/recipe-generator" target="_blank"
+          >open-sourced on GitHub</a
+        >
+        and hosted on
+        <a href="https://ai-shows-recipe.netlify.app" target="_blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
