--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap"
       rel="stylesheet"
@@ -19,19 +20,20 @@
         <br />
       <small>i.e: chicken, egg, pasta etc....</small></h2>
       <main>
-        <form>
+        <form id="form">
           <input
             type="text"
             placeholder="Please enter the ingredients........."
             autofocus
             required
             class="input-box"
+            id="input"
           />
-          <input type="submit" class="submit-button" />
+          <input type="submit" class="submit-button" id="button" />
        
         </form>
         <p>
-         <div class="recipe">how to cook....</div>
+         <div class="recipe" id="recipe"></div>
         </p>
       </main>
       <footer>
